# lie_elicitation_prompts

./: .gitignore  README.md  justfile  pyproject.toml  research_journal.md  research_log.md
lie_elicitation_prompts/: config.py
lie_elicitation_prompts/helpers/: scores.py  select.py
lie_elicitation_prompts/prompts/: prompt_loading.py  templates.py
lie_elicitation_prompts/prompts/templates/: system.yaml
lie_elicitation_prompts/prompts/templates/UKPLab-liar/: templates.yaml
nbs/: build.ipynb  mjc_001_EDA.ipynb  run.ipynb  test.ipynb
