[tool.poetry]
name = "lie_elicitation_prompts"
version = "0.1.0"
description = "A dataset of prompts designed to elicit lies using system prompts and multi shot examples.  For a particular huggingface model, you can gent the subset of the dataset that the model can answer correctly, but doesn't."
authors = ["wassname"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
eleuther-elk = "0.1.1"
numpy = "^1.26.1"
pandas = "^2.1.1"
loguru = "^0.7.2"
tqdm = "^4.66.1"
torch = {version = "^2.3+cu121", source = "pytorch"}
peft = "^0.11.1"
transformers = "4.41.0"
bitsandbytes = "^0.43.1"
accelerate = "^0.31.0"
datasets = "^2.19.2"
simple-parsing = "^0.1.5"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.3"
ipykernel = "^6.29.4"
ruff = "^0.1.3"

[[tool.poetry.source]]
# pytorch cuda needs to compe from another source https://python-poetry.org/docs/dependency-specification/#source-dependencies
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
